--- a/app/components/project.module.css
+++ b/app/components/project.module.css
@@ -8,6 +8,7 @@
 }
 .textWrapper {
     backdrop-filter: blur(100px) saturate(150%);
+    -webkit-backdrop-filter: blur(100px) saturate(150%);
     /* background: rgba(255, 255, 255, 0.5); */
     width: 30em; /*If you change this, change the media query*/
     padding: 2em;
