--- a/app/components/picture-frame.module.css
+++ b/app/components/picture-frame.module.css
@@ -47,3 +47,12 @@
     /* prevent safari from temporailiy displaying black on intial load */
     transition: 1s ease-in-out;
 }
+.clickMe {
+    top: -10%;
+    left: 55%;
+    width: 45%;
+    height: 45%;
+    position: absolute;
+    background-image: url("/clickme.svg");
+    background-size: 100% 100%;
+}
